# erc7730-analyzer

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Example_detailed_report.md  Example_mini_report.md  Example_report.md  LICENSE  README.md  analyze_7730.py  calldata-MorphoBundlerV3.json  calldata-OkxDexRouterV1.0.6-dag.json  calldata-aerodrome.json  calldata-lbtc-mainnet.json  changes.md  docker-compose.yml  docker-entrypoint.sh  migrate-v1-to-v2.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: analyze-via-service.yml  analyze.yml  ci.yml  deploy-sandbox.yml  test-pr.yml
Analysis/: CRITICALS_WETH_20251028_100426.md  CRITICALS_WETH_20251028_101428.md  CRITICALS_WETH_20251028_101903.md  CRITICALS_WETH_20251028_103532.md  CRITICALS_WETH_20251028_103849.md  CRITICALS_WETH_20251028_104931.md  CRITICALS_WETH_20251028_105713.md  CRITICALS_WETH_20251028_105910.md  CRITICALS_WETH_20251028_111044.md  CRITICALS_WETH_20251028_111818.md  CRITICALS_WETH_20251028_123206.md  CRITICALS_WETH_20251028_124140.md  CRITICALS_WETH_20251028_124748.md  CRITICALS_WETH_20251028_125327.md  CRITICALS_WETH_20251028_140924.md  CRITICALS_WETH_20251028_141758.md  CRITICALS_WETH_20251028_142504.md  CRITICALS_WETH_20251028_143025.md  CRITICALS_WETH_20251028_144131.md  CRITICALS_WETH_20251028_145237.md  CRITICALS_WETH_20251028_150134.md  SUMMARY_WETH_20251028_100426.md  SUMMARY_WETH_20251028_101428.md  SUMMARY_WETH_20251028_101903.md  SUMMARY_WETH_20251028_103532.md  SUMMARY_WETH_20251028_103849.md  SUMMARY_WETH_20251028_104931.md  SUMMARY_WETH_20251028_105713.md  SUMMARY_WETH_20251028_105910.md  SUMMARY_WETH_20251028_111044.md  SUMMARY_WETH_20251028_111818.md  SUMMARY_WETH_20251028_123206.md  SUMMARY_WETH_20251028_124140.md  SUMMARY_WETH_20251028_124748.md  SUMMARY_WETH_20251028_125327.md  SUMMARY_WETH_20251028_140924.md  SUMMARY_WETH_20251028_141758.md  SUMMARY_WETH_20251028_142504.md  SUMMARY_WETH_20251028_143025.md  SUMMARY_WETH_20251028_144131.md  (+2 more)
registry/: calldata-LIFIDiamond.json  calldata-weth.json
scripts/: mock_oidc.py  test_service.sh
specs/: changes.md  erc7730-v2.schema.json  raw_txs.json
specs/fragments/: display-constraints.md  field-formats.md  native-eth.md  path-notation.md  required-excluded.md
src/: __init__.py  analyze_7730.py  main.py
src/service/: __init__.py  app.py  auth.py  client.py  config.py  jobs.py
src/utils/: __init__.py  abi.py  abi_merger.py  abi_utils.py  analyzer.py  bundle_zip.py  clear_signing_pydantic_classes.py  markdown_formatter.py  prompts.py  raw_tx_parser.py  reporter.py  rpc_helpers.py  smart_rules.py  source_code.py  transactions.py
src/utils/abi/: __init__.py  fetcher.py  merger.py  parser.py
src/utils/audit_rules/: README.md  __init__.py  critical_issues.json  display_issues.json  erc7730_format_reference.json  recommendations.json  spec_limitations.json  validation_rules.json
src/utils/audit_rules/_backups/pre_dedup_2026_03_13/: README.txt  critical_issues.json  display_issues.json  erc7730_format_reference.json  recommendations.json  spec_limitations.json  validation_rules.json
src/utils/auditing/: __init__.py  agentic.py  batch.py  models.py  rules.py  smart_rules.py
src/utils/clients/: __init__.py
src/utils/clients/transactions/: __init__.py  constants.py  decoding.py  fetcher.py  receipts.py
src/utils/clients/transactions/core/: __init__.py  aggregation.py  base.py  explorers.py  mixin.py  query.py  snowflake.py
src/utils/core/: __init__.py  base.py  descriptor.py  detection.py  engine.py  helpers.py
src/utils/core/pipeline/: __init__.py  batch.py  finalize.py  preparation.py  screenshots.py  setup.py  source.py  transactions.py  workflow.py
src/utils/extraction/: __init__.py  raw_tx_parser.py
src/utils/extraction/source_code/: __init__.py  extractor.py  parser.py  shared.py
src/utils/extraction/source_code/dependencies/: __init__.py  enrichment.py  target.py  workflow.py
src/utils/extraction/source_code/fetching/: __init__.py  base.py  extraction.py  mixin.py  providers.py  proxies.py  vyper.py
src/utils/extraction/source_code/signatures/: __init__.py  lookup.py  mixin.py  selector.py  types.py
src/utils/llm/: __init__.py  backends.py  client.py  config.py
src/utils/reporting/: __init__.py
src/utils/reporting/markdown_formatter/: __init__.py  api.py  critical.py  detailed.py  helpers.py
src/utils/reporting/reporter/: __init__.py  expansion.py  formatting.py  generators.py  parsing.py
src/utils/screenshots/: __init__.py  elf_artifacts.py  erc7730_api.py  raw_tx.py  runner.py
tests/: conftest.py  test_api.py  test_auth_helpers.py  test_bundle_zip.py  test_descriptor_includes.py  test_jobs.py  test_main_cli.py  test_screenshot_trim.py  test_service_bundle.py
