[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erc7730-analyzer"
version = "0.1.0"
description = "ERC-7730 Clear Signing Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eth-abi>=4.0.0",
    "eth-utils>=2.0.0",
    "openai>=1.0.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "web3>=6.0.0",
]

authors = [{ name = "Maroutis"}]
keywords = ["blockchain", "ethereum", "erc7730"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
analyze_7730 = "main:main"

# Specific to uv but previous declaration is enough for setuptools
[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"utils.audit_rules" = ["*.json", "README.md"]
