[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erc7730-analyzer"
version = "0.1.0"
description = "ERC-7730 Clear Signing Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eth-abi>=4.0.0",
    "eth-utils>=2.0.0",
    "openai>=1.0.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rlp>=4.0.0",
    "web3>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "PyJWT[crypto]>=2.9.0",
    "httpx>=0.28.0",
    "snowflake-connector-python>=4.3.0",
    "speculos>=0.25.0",
]

authors = [{ name = "Maroutis"}]
keywords = ["blockchain", "ethereum", "erc7730"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
analyze_7730 = "main:main"
analyze_7730_service = "service.app:main"
erc7730-client = "service.client:main"

# Specific to uv but previous declaration is enough for setuptools
[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"utils.audit_rules" = ["*.json", "README.md"]

# ---------- Pytest ----------

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

# ---------- Ruff ----------

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults
    "SIM108", # use ternary operator (can reduce readability)
]

[tool.ruff.lint.isort]
known-first-party = ["utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
